# traffic-camera-calibration

./: .gitignore  README  README.md  all_code.txt  example.py  example_back_reprojection.py  example_reprojection.py  homograf.py  main.ipynb  main.py  pozition_camera.py  requirements.txt  unload_proj_in_txt.py  Отчет по курсовой.docx
.github/workflows/: python-package.yml
data/: .gitignore
data/synthetic/: draw.py
example/: .gitignore  example_back_reprojection.py  example_reprojection.py
example/detection/: main.py
example/karls_marks/: .gitignore  example.py  example_back_reprojection.py  example_direct.py  example_new.py  example_reprojection.py  example_traking.py
example/matrix/: video_detect_realtime.py
example/prospect/: example.py
example/pushkin_aksakov/: angle_lines.txt  back.html  calib_data.txt  calibration_lines.txt  direct.html  dist_calc_log.txt  example.py  example_VP.py  example_back.py  example_direct.py  example_dist.py  example_new.py  example_vp.ipynb  example_vp.py  ideal_params.txt  parallel_lines.txt  point_to_point.txt
example/report/: create_grid.py
example/synthetic/: .gitignore  data.txt  draw.py  lane_markings.json  main.py  report.py
example/test/: distortion.py
example/trassa/: example.py
helper/: .gitignore
legacy/: requirements.txt
legacy/detection/: .gitignore  main.py
literature/: .gitignore
literature/other/: МаксимовИлья_Курсовая_Камера.docx
materials/: possible_algorithm.canvas  useful_materials.md  Тема курсовой.docx
other/: README.md  environment.yml  test.py
other/load_video_ufanet/: load_video.py
other/ortogonalVP/: auto_using_f.py
paper/: README.md
report/: README.md  analysis.mw  draw.py  Отчет по курсовой.docx  Отчет по практике.docx  Перекресток.drawio
report/ver1/: Презентация к курсовой.pptx
report/ver3/: Выступление.docx  Выступление.pptx  Выступление2.0.pptx
source/: __init__.py  camera_model.py  initsolution.py  manual_data_input.py  plot.py
source/annotation_tools/: __init__.py  annotation_parser.py  data_markup_tool.py
source/calibration/: README.md  __init__.py  back_optimization.py  base.py  detectvanishingpoint.py  direct_optimization.py  direct_optimizatoin.py  pipeline.py  using_vp.py  vanishing_point_calibration.py
source/calibration_new/: base.py  pipeline.py
source/core/: README.md  __init__.py  camera.py  camera_extrinsics.py  camera_intrinsics.py  camera_model.py
source/distortion/: CMakeLists.txt  clicked_curves.npy  example.py  extended_hough_transform.py  manual_distortion.py  manual_line_distortion_correction.py  recovery_image_1_params.py  (+3 more)
source/distortion/cpp/: CMakeLists.txt  README.md  bindings.cpp  hough.cpp  hough.hpp
source/distortion/extended_hough_transform/: .gitignore  CMakeLists.txt  ami.cpp  canny_ami.cpp
src/: calibrating_the_camera.ipynb  camera.py  camera_model.py  data_preparation.py  distance.py  initsolution.py  line.py  main.ipynb  main.py  manual_data_input.py  models.py  new_optimization.py  optimizetion.py  plot.py  point.py  point2D.py  point3D.py  pointND.py  simple_calib.py  test_try1.ipynb  try_transformation.ipynb  vanishing.py
(+108 files in other folders)
